--- a/src/pretalx/static/common/scss/_variables.scss
+++ b/src/pretalx/static/common/scss/_variables.scss
@@ -1,7 +1,7 @@
 /* colors */
-$brand-primary: #3aa57c !default;
-$brand-success: #3aa57c !default;
-$brand-info: #4697c9 !default;
+$brand-primary: #00175C !default;
+$brand-success: #FF33A6 !default;
+$brand-info: #313CFD !default;
 $brand-warning: #f9a557 !default;
 $brand-danger: #b23e65 !default;
 $link-color: $brand-success !default;
