--- a/src/pretalx/static/api/css/api.css
+++ b/src/pretalx/static/api/css/api.css
@@ -1,5 +1,5 @@
 body {
-  font-family: "Muli", "Open Sans", "OpenSans", "Helvetica Neue", Helvetica,
+  font-family: "Open Sans", "OpenSans", "Helvetica Neue", Helvetica,
     Arial, sans-serif;
   font-size: 16px;
 }
@@ -8,7 +8,7 @@ h2,
 h3,
 h4,
 legend {
-  font-family: "Titillium Web", "Open Sans", "OpenSans", "Helvetica Neue",
+  font-family: "Open Sans", "OpenSans", "Helvetica Neue",
     Helvetica, Arial, sans-serif;
 }
 body pre {
