--- a/src/pretalx/static/orga/scss/auth.scss
+++ b/src/pretalx/static/orga/scss/auth.scss
@@ -16,9 +16,13 @@ body {
 }
 
 .logo {
-  width: 10rem;
+  width: 48rem;
   height: auto;
   margin-bottom: 20px;
+
+    @include media-breakpoint-down(sm) {
+        width: 32rem;
+    }
 }
 
 .card {
