--- a/src/pretalx/cfp/templates/cfp/event/user_submissions.html
+++ b/src/pretalx/cfp/templates/cfp/event/user_submissions.html
@@ -72,8 +72,8 @@
                     <tr>
                         <th>{% translate "Title" %}</th>
                         <th>{% translate "State" %}</th>
-                        <th></th>
-                        <th></th>
+                        <th class="d-none d-sm-table-cell"></th>
+                        <th class="d-none d-sm-table-cell"></th>
                     </tr>
                 </thead>
                 <tbody>
@@ -87,7 +87,7 @@
                             <td>
                                 {% include "cfp/event/fragment_state.html" with state=submission.user_state %}
                             </td>
-                            <td class="flip text-right">
+                            <td class="flip text-right d-none d-sm-table-cell">
                                 {% if submission.public_slots %}
                                     <a href="{{ submission.urls.public }}">
                                         {% for talk in submission.public_slots %}
@@ -96,7 +96,7 @@
                                     </a>
                                 {% endif %}
                             </td>
-                            <td class="flip text-right">
+                            <td class="flip text-right d-none d-sm-table-cell">
                                 {% if submission.review_code %}
                                     <button data-destination="{{ submission.urls.review.full }}"
                                             class="btn btn-sm btn-info"
@@ -127,6 +127,50 @@
                                     </a>
                                 {% endif %}
                             </td>
+                        </tr>
+                        <tr class="d-sm-none">
+                          <td>
+                            {% if submission.public_slots %}
+                            <a href="{{ submission.urls.public }}">
+                              {% for talk in submission.public_slots %}
+                              {{ talk.start|date:DAY_MONTH_DATE_FORMAT }}, {{ talk.start|date:"TIME_FORMAT" }}–{{ talk.end|date:"TIME_FORMAT" }}, {{ talk.room.name }} {% if not forloop.last %}<br>{% endif %}
+                              {% endfor %}
+                            </a>
+                            {% endif %}
+                          </td>
+                          <td>
+                            <div class="float-right">
+                              {% if submission.review_code %}
+                              <button data-destination="{{ submission.urls.review.full }}"
+                                      class="btn btn-sm btn-info"
+                                      data-toggle="tooltip"
+                                      data-placement="top"
+                                      title="{% translate 'Copy code for review' %}"
+                                      target="_blank" rel="noopener">
+                                <i class="fa fa-link"></i>
+                              </button>
+                              {% endif %}
+                              <a href="{{ submission.urls.user_base }}" class="btn btn-sm btn-info">
+                                {% if submission.editable %}
+                                <i class="fa fa-edit" title="{% translate "Edit proposal" %}"></i>
+                                {% else %}
+                                <i class="fa fa-edit" title="{% translate "Open proposal" %}"></i>
+                                {% endif %}
+                              </a>
+                              {% if submission.state == 'accepted' %}
+                              <a href="{{ submission.urls.confirm }}"
+                                 class="btn btn-sm btn-success">
+                                <i class="fa fa-check"></i> {% translate "Confirm" %}
+                              </a>
+                              {% endif %}
+                              {% if request.event.feature_flags.use_feedback and submission.does_accept_feedback %}
+                              <a href="{{ submission.urls.feedback }}"
+                                 class="btn btn-sm btn-info">
+                                <i class="fa fa-comments"></i> {% translate "Feedback" %}{% if submission.feedback.count %}  ({{ submission.feedback.count }}){% endif %}
+                              </a>
+                              {% endif %}
+                            </div>
+                          </td>
                         </tr>
                     {% endfor %}
                 </tbody>
