OERC-17: adjusting link colors and button colors

--- a/src/pretalx/static/common/scss/_font.scss
+++ b/src/pretalx/static/common/scss/_font.scss
@@ -85,10 +85,10 @@ body {
   font-size: 16px;
   h1,
   h2,
-  h3,
-  h4,
+  //h3,
+  //h4,
   legend,
-  .btn,
+  //.btn,
   button {
     font-family: "Unbounded", "Open Sans", "OpenSans", "Helvetica Neue",
       Helvetica, Arial, sans-serif;
