--- a/src/pretalx/static/common/scss/_variables.scss
+++ b/src/pretalx/static/common/scss/_variables.scss
@@ -1,10 +1,10 @@
 /* colors */
 $brand-primary: #00175C !default;
-$brand-success: #FF33A6 !default;
+$brand-success: #C5FF88 !default;
 $brand-info: #313CFD !default;
 $brand-warning: #f9a557 !default;
 $brand-danger: #b23e65 !default;
-$link-color: $brand-success !default;
+$link-color: $brand-primary !default;
 
 $body-color: rgba(0, 0, 0, 0.87) !default;
 $body-color-light: rgba(0, 0, 0, 0.6) !default;
