--- a/src/pretalx/static/orga/scss/main.scss
+++ b/src/pretalx/static/orga/scss/main.scss
@@ -4,6 +4,7 @@
 @import "../../common/scss/_flags";
 @import "../../common/scss/_forms";
 @import "../../common/scss/_availabilities";
+@import "../../common/scss/_buttons";
 @import "../../common/scss/_dashboard";
 @import "../../common/scss/_stages";
 @import "../../common/scss/_avatar";
