--- a/src/pretalx/static/cfp/scss/main.scss
+++ b/src/pretalx/static/cfp/scss/main.scss
@@ -4,6 +4,7 @@
 @import "../../common/scss/_font";
 @import "../../vendored/forkawesome/scss/fork-awesome";
 @import "../../common/scss/_availabilities";
+@import "../../common/scss/_buttons";
 @import "../../common/scss/_forms";
 @import "../../common/scss/_dashboard";
 @import "../../common/scss/_stages";
