OERC-17: changin a few weird colors. Adding a clear cache script

--- a/src/pretalx/static/common/scss/_dashboard.scss
+++ b/src/pretalx/static/common/scss/_dashboard.scss
@@ -85,7 +85,7 @@
         text-decoration: none;
       }
       &.dashboard-block-addon-success {
-        color: $gray-100;
+        color: $brand-primary;
         background-color: $brand-success;
       }
       &.dashboard-block-addon-info {
