--- a/src/pretalx/orga/templates/orga/event/dashboard.html
+++ b/src/pretalx/orga/templates/orga/event/dashboard.html
@@ -53,7 +53,7 @@
                 {% translate "Your event is currently" %}
             </div>
             {% if request.event.is_public %}
-                <div class="dashboard-live text-success">
+                <div class="dashboard-live text-primary">
                     <i class="fa fa-check-circle"></i>
                     {% translate "live" %}
                 </div>
