OERC-17: fixing some bright colors and adding the clearcache script to production-deployment

--- a/src/pretalx/static/common/scss/_dashboard.scss
+++ b/src/pretalx/static/common/scss/_dashboard.scss
@@ -122,7 +122,7 @@
         }
         &.state.active {
           background-color: $brand-success;
-          color: $white;
+          color: $brand-primary;
           font-weight: bold;
         }
         &.submissions {
