--- a/src/pretalx/orga/templates/orga/submission/content.html
+++ b/src/pretalx/orga/templates/orga/submission/content.html
@@ -77,6 +77,7 @@
         {% if form.track %}{% bootstrap_field form.track layout='event' %}{% endif %}
         {% if form.tags %}{% bootstrap_field form.tags layout='event' %}{% endif %}
         {% bootstrap_field form.custom_speaker_title layout='event' %}
+        {% bootstrap_field form.etherpad_url layout='event' %}
         {% if form.abstract %}{% bootstrap_field form.abstract layout='event' %}{% endif %}
         {% if form.description %}{% bootstrap_field form.description layout='event' %}{% endif %}
         {% if form.notes %}{% bootstrap_field form.notes layout='event' %}{% endif %}
