OERC-28: fixing iframe loading and CORSpolicy so that etherpad can be loaded and edited inside an iframe

--- a/src/pretalx/agenda/templates/agenda/talk.html
+++ b/src/pretalx/agenda/templates/agenda/talk.html
@@ -84,7 +84,7 @@
                     {{ recording_iframe|safe }}
                 {% endif %}
               {% if submission.etherpad_url %}
-                <div class="embed-responsive embed-responsive-16by9">
+                <div class="embed-responsive embed-responsive-16by9 card">
                   <iframe src="{{ submission.etherpad_url }}" allowfullscreen></iframe>
                 </div>
               {% endif %}
