OERC-22: Fixed a padding

--- a/src/pretalx/plugins/pretalx-public-voting/pretalx_public_voting/templates/pretalx_public_voting/submission_list.html
+++ b/src/pretalx/plugins/pretalx-public-voting/pretalx_public_voting/templates/pretalx_public_voting/submission_list.html
@@ -39,7 +39,7 @@
                         </div>
                     </div>
                     <div class="card-header card-footer card-columns align-items-start">
-                      <strong class="px-2">{% trans "Comment" %}:</strong>
+                      <strong class="pr-2">{% trans "Comment" %}:</strong>
                       <div class="form">
                         {% bootstrap_field submission.vote_form.comment layout="inline" %}
                       </div>
