OERC-25: Adding Emoji-Label Feature

--- a/src/pretalx/agenda/templates/agenda/talk.html
+++ b/src/pretalx/agenda/templates/agenda/talk.html
@@ -34,7 +34,7 @@
         <h3 class="talk-title">
             <div class="heading-with-buttons">
                 <span>
-                    {{ submission.title }}
+                    {{ submission.emoji_label }} {{ submission.title }}
                     <button class="btn btn-xs btn-link d-none" id="fav-button">
                         <i class="fa fa-star-o d-none" title="{% translate "Favourite this session" %}"></i>
                         <i class="fa fa-star d-none" title="{% translate "Remove this session from your favourites" %}"></i>
