OERC-22: SHowing a strike when no comments exist

--- a/src/pretalx/plugins/pretalx-public-voting/pretalx_public_voting/templates/pretalx_public_voting/submission_list.html
+++ b/src/pretalx/plugins/pretalx-public-voting/pretalx_public_voting/templates/pretalx_public_voting/submission_list.html
@@ -45,18 +45,20 @@
                       </div>
                       <div class="btn-save-comment btn btn-info ml-auto mt-auto">{% trans "Save!" %}</div>
                     </div>
-                    {% if submission.comments|length > 0 %}
                     <div class="card-header card-footer card-columns align-items-start">
                       <strong class="w-25 pr-2">{% trans "Comments from other users" %}:</strong>
                       <div class="flex-grow-1">
-                        {% for submission_comment in submission.comments %}
-                          <p class="card p-2 bg-light">
-                            {{ submission_comment }}
-                          </p>
-                        {% endfor %}
+                        {% if submission.comments|length > 0 %}
+                          {% for submission_comment in submission.comments %}
+                            <p class="card p-2 bg-light">
+                              {{ submission_comment }}
+                            </p>
+                          {% endfor %}
+                        {% else %}
+                          <p>-</p>
+                        {% endif %}
                       </div>
                     </div>
-                  {% endif %}
                 </div>
             {% empty %}
                 <p>No submissions yet.</p>
