--- a/src/pretalx/plugins/pretalx-public-voting/pretalx_public_voting/templates/pretalx_public_voting/thanks.html
+++ b/src/pretalx/plugins/pretalx-public-voting/pretalx_public_voting/templates/pretalx_public_voting/thanks.html
@@ -3,6 +3,7 @@
 {% load i18n %}
 
 {% block content %}
+    {% include "agenda/header_row.html" with with_margin=True %}
     <h1>{% trans "Thanks for signing up!" %}</h1>
 
     {% blocktrans trimmed %}
