--- a/src/pretalx/plugins/pretalx-public-voting/pretalx_public_voting/templates/pretalx_public_voting/submission_list.html
+++ b/src/pretalx/plugins/pretalx-public-voting/pretalx_public_voting/templates/pretalx_public_voting/submission_list.html
@@ -9,6 +9,7 @@
     <script src="{% static "pretalx_public_voting/vote.js" %}"></script>
     <link rel="stylesheet" href="{% static "pretalx_public_voting/vote.css" %}" />
 
+    {% include "agenda/header_row.html" with with_margin=True %}
     <h1>{% trans "Public voting" %}</h1>
     {{ request.event.public_vote_settings.text|rich_text }}
     {% if hashed_email %}
