OERC-22: fixing typo

--- a/src/pretalx/agenda/templates/agenda/header_row.html
+++ b/src/pretalx/agenda/templates/agenda/header_row.html
@@ -17,7 +17,7 @@
           <i class="fa fa-group"></i> Kooperationspartner*innen
         </a>
         <a href="{{ request.event.urls.page_public_voting }}" class="btn btn-outline-success {% if "/p/voting/signup/" in request.path %} active{% endif %}">
-          <i class="fa fa-comment-o"></i> Öffentlichen Abstimmung
+          <i class="fa fa-comment-o"></i> Öffentliche Abstimmung
         </a>
     </div>
     <div class="header-right">
