OERC-20: adding settings for pretix APPI keys. And participants page.

--- a/src/pretalx/agenda/templates/agenda/header_row.html
+++ b/src/pretalx/agenda/templates/agenda/header_row.html
@@ -13,6 +13,9 @@
         <a href="{{ request.event.urls.speakers }}" class="btn btn-outline-success {% if "/speaker/" in request.path %} active{% endif %}">
             <i class="fa fa-group"></i> {{ phrases.schedule.speakers }}
         </a>
+        <a href="{{ request.event.urls.participants }}" class="btn btn-outline-success {% if "/participants/" in request.path %} active{% endif %}">
+        <i class="fa fa-group"></i> Teilnahmeliste
+        </a>
         <a href="{{ request.event.urls.page_sponsors }}" class="btn btn-outline-success {% if "/page/sponsors/" in request.path %} active{% endif %}">
           <i class="fa fa-group"></i> Kooperationspartner*innen
         </a>
