--- a/src/pretalx/orga/templates/orga/settings/form.html
+++ b/src/pretalx/orga/templates/orga/settings/form.html
@@ -26,7 +26,8 @@
 
 {% block settings_content %}
     <h2>{% translate "Settings" %}</h2>
-    <div class="flex-container"><div class="flex-content">
+    <div class="flex-container">
+      <div class="flex-content">
         <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
             <fieldset>
@@ -76,23 +77,33 @@
                 <div {% if request.event.primary_color %}style="--color: {{ request.event.primary_color }}"{% endif %} class="colorpicker-update">
                     {% bootstrap_field form.header_pattern layout='event' %}
                 </div>
-                <fieldset>
-                    <div class="submit-group panel">
-                        <span>
-                            {% has_perm "person.is_administrator" request.user request.event as can_delete_event %}
-                            {% if can_delete_event %}
-                                <a class="btn btn-outline-danger btn-lg" href="{{ request.event.orga_urls.delete }}">
-                                    {% translate "Delete event" %}
-                                </a>
-                            {% endif %}
-                        </span>
-                        <span>
-                            <button type="submit" class="btn btn-success btn-lg">
-                                <i class="fa fa-check"></i>
-                                {{ phrases.base.save }}
-                            </button>
-                        </span>
-                    </div>
-                </form>
-            </div></div>
+            </fieldset>
+            <fieldset>
+              <legend id="pretix">
+                {% translate "Pretix API settings" %}
+              </legend>
+              {% bootstrap_field form.pretix_api_key layout='event' %}
+              {% bootstrap_field form.pretix_identifier_question_participant_list layout='event' %}
+            </fieldset>
+          <fieldset>
+            <div class="submit-group panel">
+              <span>
+                  {% has_perm "person.is_administrator" request.user request.event as can_delete_event %}
+                  {% if can_delete_event %}
+                      <a class="btn btn-outline-danger btn-lg" href="{{ request.event.orga_urls.delete }}">
+                          {% translate "Delete event" %}
+                      </a>
+                  {% endif %}
+              </span>
+              <span>
+                <button type="submit" class="btn btn-success btn-lg">
+                    <i class="fa fa-check"></i>
+                    {{ phrases.base.save }}
+                </button>
+              </span>
+            </div>
+          </fieldset>
+          </form>
+        </div>
+    </div>
 {% endblock %}
