--- a/src/pretalx/agenda/templates/agenda/header_row.html
+++ b/src/pretalx/agenda/templates/agenda/header_row.html
@@ -19,7 +19,7 @@
         <a href="{{ request.event.urls.page_sponsors }}" class="btn btn-outline-success {% if "/page/sponsors/" in request.path %} active{% endif %}">
           <i class="fa fa-group"></i> Kooperationspartner*innen
         </a>
-        <a href="{{ request.event.urls.page_public_voting }}" class="btn btn-outline-success {% if "/p/voting/signup/" in request.path %} active{% endif %}">
+        <a href="{{ request.event.urls.page_public_voting }}" class="btn btn-outline-success {% if "/p/voting/" in request.path %} active{% endif %}">
           <i class="fa fa-comment-o"></i> Öffentliche Abstimmung
         </a>
     </div>
