OERC-22: Adding submission wishes import from pretix API and command for cronjob

--- a/src/pretalx/orga/templates/orga/settings/form.html
+++ b/src/pretalx/orga/templates/orga/settings/form.html
@@ -87,6 +87,7 @@
               {% bootstrap_field form.pretix_api_organisator_slug layout='event' %}
               {% bootstrap_field form.pretix_api_event_slug layout='event' %}
               {% bootstrap_field form.pretix_identifier_question_participant_list layout='event' %}
+              {% bootstrap_field form.pretix_identifier_question_submission_wishes layout='event' %}
             </fieldset>
           <fieldset>
             <div class="submit-group panel">
