OERC-17: right side of scheduler navigation fixed

--- a/src/pretalx/static/agenda/scss/_agenda.scss
+++ b/src/pretalx/static/agenda/scss/_agenda.scss
@@ -71,12 +71,16 @@ header {
     display: flex;
     flex-direction: row;
     align-items: baseline;
+    flex-shrink: 0;
     & > * {
+      flex-shrink: 0;
       margin-right: 8px;
       height: 90%;
       summary {
         height: 100%;
         margin-bottom: 3px;
+        min-width: 4rem;
+        max-height: 2.5rem;
       }
     }
   }
