OERC-22: updated some translations for public voting and fixed cronjobs on live

--- a/src/pretalx/agenda/templates/agenda/header_row.html
+++ b/src/pretalx/agenda/templates/agenda/header_row.html
@@ -23,7 +23,7 @@
           <i class="fa fa-comment-o"></i> Einreichungen
         </a>
         <a href="{{ request.event.urls.page_public_voting_wishes }}" class="btn btn-outline-success {% if "/p/voting/public/wishes" in request.path %} active{% endif %}">
-          <i class="fa fa-comment-o"></i> Einreichungswünsche
+          <i class="fa fa-comment-o"></i> Veranstaltungswünsche
         </a>
     </div>
     <div class="header-right">
