--- a/src/pretalx/plugins/pretalx-public-voting/pretalx_public_voting/templates/pretalx_public_voting/settings.html
+++ b/src/pretalx/plugins/pretalx-public-voting/pretalx_public_voting/templates/pretalx_public_voting/settings.html
@@ -40,7 +40,7 @@
         </a>
         <br>
         <a class="btn btn-outline-info m-1" target="_blank" href="{% if request.event.custom_domain %}{{ request.event.custom_domain }}{% endif %}{% url "plugins:pretalx_public_voting:public_wishes" event=request.event.slug %}">
-        Einreichungswünsche öffentlich
+        Veranstaltungswünsche öffentlich
         </a>
       </p>
     </div>
