--- a/src/pretalx/plugins/pretalx-public-voting/pretalx_public_voting/templates/pretalx_public_voting/public_submissionwish_list.html
+++ b/src/pretalx/plugins/pretalx-public-voting/pretalx_public_voting/templates/pretalx_public_voting/public_submissionwish_list.html
@@ -10,12 +10,12 @@
 <link rel="stylesheet" href="{% static "pretalx_public_voting/vote.css" %}" />
 
 {% include "agenda/header_row.html" with with_margin=True %}
-<h1>{% trans "Public voting" %}</h1>
+<h2>{% trans "Public voting" %} - Veranstaltungswünsche</h2>
 {{ request.event.public_vote_settings.text|rich_text }}
 
 <p>
   {% blocktrans trimmed %}
-  Here you can see all submissions and their comments.
+  Here you can see all submission wishes and their comments.
   {% endblocktrans %}
   <a href="{% url "plugins:pretalx_public_voting:signup" event=request.event.slug %}">{% trans "Click here to sign up for voting." %}</a>
 </p>
@@ -42,7 +42,7 @@
     </div>
   </div>
   {% empty %}
-  <p>No submissions yet.</p>
+  <p>Noch keine Einreichungen.</p>
   {% endfor %}
   {% include "orga/includes/pagination.html" %}
 </div>
