--- a/src/pretalx/agenda/templates/agenda/participants.html
+++ b/src/pretalx/agenda/templates/agenda/participants.html
@@ -5,6 +5,14 @@
 {% load static %}
 
 {% block agenda_content %}
+
+{% block scripts %}
+  {% compress js %}
+  <script src="{% static "agenda/js/v-card.js" %}" async></script>
+  {% endcompress %}
+{% endblock %}
+
+
 {% include "agenda/header_row.html" %}
 <p></p>
 <article>
@@ -18,7 +26,39 @@
   <div class="p-3">
     {% if attendees|length > 0 %}
       {% for attendee in attendees %}
-        <p><i class="fa fa-user pr-2"></i><strong>{{attendee}}</strong></p>
+        <div class="participant-v-card d-flex flex-column flex-md-row">
+          <p>
+            <i class="fa fa-vcard pr-2"></i>
+            <strong><span class="first_name">{{attendee.given_name}}</span>&nbsp<span class="last_name">{{attendee.last_name}}</span></strong>
+          </p>
+          <div class="d-flex flex-column flex-md-row flex-grow-1">
+            <div class="mx-2 vcard">
+              {% if attendee.organisation %}
+              <div class="org">{{attendee.organisation}}</div>
+              {% endif %}
+              {% if attendee.email %}
+              <div class="email">{{attendee.email}}</div>
+              {% endif %}
+              {% if attendee.postcode or attendee.city %}
+              <div class="adr">
+                <span>Adresse:</span>
+                {% if attendee.postcode %}
+                &nbsp<span class="postal-code">{{attendee.postcode}}</span>
+                {% endif %}
+                {% if attendee.city %}
+                &nbsp<span class="city">{{attendee.city}}</span>
+                {% endif %}
+                {% if attendee.country %}
+                &nbsp<span class="country">{{attendee.country}}</span>
+                {% endif %}
+              </div>
+              {% endif %}
+            </div>
+            <div class="ml-auto py-2">
+              <button class="participant-v-card__download-btn btn btn-outline-info"><i class="fa fa-download"></i></button>
+            </div>
+          </div>
+        </div>
       {% endfor %}
     {% else %}
     <p><strong>-</strong></p>
