OERC-20: fixed vcard download

--- a/src/pretalx/agenda/templates/agenda/participants.html
+++ b/src/pretalx/agenda/templates/agenda/participants.html
@@ -8,7 +8,7 @@
 
 {% block scripts %}
   {% compress js %}
-  <script src="{% static "agenda/js/v-card.js" %}" async></script>
+    <script src="{% static "agenda/js/v-card.js" %}"></script>
   {% endcompress %}
 {% endblock %}
 
