OERC-17: settings page info colors changed from green to blue

--- a/src/pretalx/static/common/scss/_forms.scss
+++ b/src/pretalx/static/common/scss/_forms.scss
@@ -181,7 +181,7 @@ input[type="radio"] + label {
     height: 16px;
     margin: 4px 0px 0;
     opacity: 0;
-    background: $brand-success;
+    background: $brand-info;
     margin-left: -34px;
     border-radius: 2px;
   }
