OERC-16: adding custom_speaker_title to CFP

--- a/src/pretalx/cfp/templates/cfp/event/user_submissions.html
+++ b/src/pretalx/cfp/templates/cfp/event/user_submissions.html
@@ -44,7 +44,7 @@
                                     <button data-destination="{{ submission.urls.review.full }}"
                                             class="btn btn-sm btn-info"
                                             data-toggle="tooltip"
-                                            data-placement="top"
+                                            data-placement="left"
                                             title="{% translate 'Copy code for review' %}"
                                             target="_blank" rel="noopener">
                                         <i class="fa fa-link"></i>
@@ -101,7 +101,7 @@
                                     <button data-destination="{{ submission.urls.review.full }}"
                                             class="btn btn-sm btn-info"
                                             data-toggle="tooltip"
-                                            data-placement="top"
+                                            data-placement="left"
                                             title="{% translate 'Copy code for review' %}"
                                             target="_blank" rel="noopener">
                                         <i class="fa fa-link"></i>
@@ -144,7 +144,7 @@
                               <button data-destination="{{ submission.urls.review.full }}"
                                       class="btn btn-sm btn-info"
                                       data-toggle="tooltip"
-                                      data-placement="top"
+                                      data-placement="left"
                                       title="{% translate 'Copy code for review' %}"
                                       target="_blank" rel="noopener">
                                 <i class="fa fa-link"></i>
